package models;

public enum OrderStatus {
    PENDING,
    IN_PROGRESS,
    COMPLETED,
    SERVED,
    CANCELED
}