package models;

public enum ReservationStatus {
    CONFIRMED,
    CANCELED,
    PENDING
}