@startuml

skinparam classAttributeIconSize 0
' ============================
'         MODELS
' ============================
package models {
  class Customer {
    -name: String
    -contactInfo: String
    +Customer(name: String, contactInfo: String)
    +getName(): String
    +setName(name: String): void
    +getContactInfo(): String
    +setContactInfo(contactInfo: String): void
    +toString(): String
  }

  class MenuItem {
    -name: String
    -description: String
    -price: BigDecimal
    -category: String
    +MenuItem(name: String, description: String, price: BigDecimal, category: String)
    +getName(): String
    +setName(name: String): void
    +getDescription(): String
    +setDescription(description: String): void
    +getPrice(): BigDecimal
    +setPrice(price: BigDecimal): void
    +getCategory(): String
    +setCategory(category: String): void
    +toString(): String
  }

  class Table {
    -tableNumber: int
    -capacity: int
    -isAvailable: boolean
    +Table(tableNumber: int, capacity: int)
    +getTableNumber(): int
    +setTableNumber(tableNumber: int): void
    +getCapacity(): int
    +setCapacity(capacity: int): void
    +isAvailable(): boolean
    +setAvailable(available: boolean): void
    +toString(): String
  }

  enum OrderStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
    SERVED
    CANCELED
  }

  class Order {
    -customer: Customer
    -table: Table
    -items: List<MenuItem>
    -status: OrderStatus
    +Order(customer: Customer, table: Table)
    +addItem(item: MenuItem): void
    +getTotal(): BigDecimal
    +getCustomer(): Customer
    +setCustomer(customer: Customer): void
    +getTable(): Table
    +setTable(table: Table): void
    +getItems(): List<MenuItem>
    +setItems(items: List<MenuItem>): void
    +getStatus(): OrderStatus
    +setStatus(status: OrderStatus): void
    +toString(): String
  }

  enum ReservationStatus {
    CONFIRMED
    CANCELED
    PENDING
  }

  class Reservation {
    -customer: Customer
    -table: Table
    -reservationTime: LocalDateTime
    -numberOfGuests: int
    -status: ReservationStatus
    +Reservation(customer: Customer, table: Table, reservationTime: LocalDateTime, numberOfGuests: int)
    +getCustomer(): Customer
    +setCustomer(customer: Customer): void
    +getTable(): Table
    +setTable(table: Table): void
    +getReservationTime(): LocalDateTime
    +setReservationTime(reservationTime: LocalDateTime): void
    +getNumberOfGuests(): int
    +setNumberOfGuests(numberOfGuests: int): void
    +getStatus(): ReservationStatus
    +setStatus(status: ReservationStatus): void
    +toString(): String
  }

  enum PaymentMethod {
    CASH
    CREDIT_CARD
    DEBIT_CARD
    BANK_TRANSFER
  }

  class Invoice {
    -order: Order
    -totalAmount: BigDecimal
    -paymentMethod: PaymentMethod
    -issueDate: LocalDateTime
    +Invoice(order: Order, paymentMethod: PaymentMethod)
    +getOrder(): Order
    +setOrder(order: Order): void
    +getTotalAmount(): BigDecimal
    +setTotalAmount(totalAmount: BigDecimal): void
    +getPaymentMethod(): PaymentMethod
    +setPaymentMethod(paymentMethod: PaymentMethod): void
    +getIssueDate(): LocalDateTime
    +setIssueDate(issueDate: LocalDateTime): void
    +toString(): String
  }
}

' ============================
'       EXCEPTIONS
' ============================
package exceptions {
  class InvoiceException {
    +InvoiceException(message: String)
  }
  class InvalidInvoiceOrderStatusException {
    +InvalidInvoiceOrderStatusException(message: String)
  }
  InvoiceException <|-- InvalidInvoiceOrderStatusException

  class OrderException {
    +OrderException(message: String)
  }
  class InvalidOrderTableException {
    +InvalidOrderTableException(message: String)
  }
  class InvalidMenuItemException {
    +InvalidMenuItemException(message: String)
  }
  OrderException <|-- InvalidOrderTableException
  OrderException <|-- InvalidMenuItemException

  class ReservationException {
    +ReservationException(message: String)
  }
  class NoAvailableTablesException {
    +NoAvailableTablesException(message: String)
  }
  ReservationException <|-- NoAvailableTablesException
}

' ============================
'       PERSISTENCE
' ============================
package persistence {
  interface DataAccessObject<T> {
    +saveAll(List<T>): void
    +loadAll(): List<T>
  }

  class SerializableDao<T> {
    -filePath: Path
    -type: Class<T>
    +SerializableDao(filePath: String, type: Class<T>)
    +saveAll(List<T>): void
    +loadAll(): List<T>
  }

  DataAccessObject <|.. SerializableDao
}

' ============================
'         SERVICES
' ============================
package services {
  class MenuService {
    -menuItems: List<MenuItem>
    -menuItemDao: DataAccessObject<MenuItem>
    +MenuService(menuItemDao: DataAccessObject<MenuItem>)
    +initializeDefaultMenu(): void
    +addMenuItem(item: MenuItem): void
    +getMenuItems(): List<MenuItem>
    +getMenuItemByName(name: String): Optional<MenuItem>
    +removeMenuItem(name: String): boolean
  }

  class TableService {
    -tables: List<Table>
    -tableDao: DataAccessObject<Table>
    +TableService(tableDao: DataAccessObject<Table>)
    +initializeDefaultTables(): void
    +getAllTables(): List<Table>
    +getAvailableTables(): List<Table>
    +getTableByNumber(tableNumber: int): Optional<Table>
    +updateTableAvailability(tableNumber: int, isAvailable: boolean): void
  }

  class ReservationService {
    -reservations: List<Reservation>
    -reservationDao: DataAccessObject<Reservation>
    -tableService: TableService
    +ReservationService(reservationDao: DataAccessObject<Reservation>, tableService: TableService)
    +createReservation(customer: Customer, reservationTime: LocalDateTime, numberOfGuests: int): Reservation
    +cancelReservation(reservation: Reservation): void
    +getAllReservations(): List<Reservation>
  }

  class OrderService {
    -orders: List<Order>
    -orderDao: DataAccessObject<Order>
    -menuService: MenuService
    -tableService: TableService
    +OrderService(orderDao: DataAccessObject<Order>, menuService: MenuService, tableService: TableService)
    +createOrder(customer: Customer, tableNumber: int): Order
    +addItemToOrder(order: Order, itemName: String): void
    +updateOrderStatus(order: Order, newStatus: OrderStatus): void
    +getAllOrders(): List<Order>
  }

  class InvoiceService {
    -invoices: List<Invoice>
    -invoiceDao: DataAccessObject<Invoice>
    -tableService: TableService
    +InvoiceService(invoiceDao: DataAccessObject<Invoice>, tableService: TableService)
    +generateInvoice(order: Order, paymentMethod: PaymentMethod): Invoice
    +getAllInvoices(): List<Invoice>
  }
}

' ============================
'         FACADE
' ============================
package facade {
  interface RestaurantFacade {
    +getMenuItems(): List<MenuItem>
    +addMenuItem(item: MenuItem): void
    +removeMenuItem(name: String): boolean

    +getAllTables(): List<Table>
    +getAvailableTables(): List<Table>
    +setTableAvailability(tableNumber: int, available: boolean): void

    +getAllReservations(): List<Reservation>
    +createReservation(customer: Customer, time: LocalDateTime, guests: int): Reservation
    +cancelReservation(reservation: Reservation): void

    +getAllOrders(): List<Order>
    +createOrderFromReservation(reservation: Reservation): Order
    +createWalkInOrder(customer: Customer, tableNumber: int): Order
    +addItemToOrder(order: Order, menuItemName: String): void
    +updateOrderStatus(order: Order, status: OrderStatus): void

    +generateInvoice(order: Order, paymentMethod: PaymentMethod): Invoice
  }

  class RestaurantFacadeImpl {
    -menuService: services.MenuService
    -tableService: services.TableService
    -reservationService: services.ReservationService
    -orderService: services.OrderService
    -invoiceService: services.InvoiceService

    +RestaurantFacadeImpl(menuService: services.MenuService, tableService: services.TableService,
      reservationService: services.ReservationService, orderService: services.OrderService,
      invoiceService: services.InvoiceService)
    +(implements RestaurantFacade methods...)
  }

  RestaurantFacade <|.. RestaurantFacadeImpl
}

' ============================
'      APPLICATION (CLI)
' ============================
package app {
  class Application {
    -DATA_PATH: String
    -facade: facade.RestaurantFacade
    +main(args: String[]): void
    -startCLI(): void
    -manageMenu(): void
    -manageReservations(): void
    -manageOrders(): void
    -promptInt(scanner: Scanner, prompt: String): int
    -promptBigDecimal(scanner: Scanner, prompt: String): BigDecimal
    -promptNonEmptyString(scanner: Scanner, prompt: String): String
    -promptDateTime(scanner: Scanner, prompt: String): LocalDateTime
    -chooseFromList(scanner: Scanner, options: List<T>, labelProvider: Function<T,String>, header: String): T
    -promptEnumSelection(scanner: Scanner, enumClass: Class<E>, header: String): E
  }
}

' ============================
'      RELATIONSHIPS (MODELS)
' ============================
models.Order o-- models.Customer
models.Order o-- models.Table
models.Order "1" o-- "*" models.MenuItem
models.Invoice o-- models.Order
models.Reservation o-- models.Customer
models.Reservation o-- models.Table

' ============================
'      RELATIONSHIPS (SERVICES -> PERSISTENCE)
' ============================
services.MenuService o-- persistence.DataAccessObject
services.TableService o-- persistence.DataAccessObject
services.ReservationService o-- persistence.DataAccessObject
services.OrderService o-- persistence.DataAccessObject
services.InvoiceService o-- persistence.DataAccessObject

' ============================
'      RELATIONSHIPS (SERVICES <-> SERVICES)
' ============================
services.ReservationService o-- services.TableService
services.OrderService o-- services.MenuService
services.OrderService o-- services.TableService
services.InvoiceService o-- services.TableService

' ============================
'      FACADE -> SERVICES
' ============================
facade.RestaurantFacadeImpl o-- services.MenuService
facade.RestaurantFacadeImpl o-- services.TableService
facade.RestaurantFacadeImpl o-- services.ReservationService
facade.RestaurantFacadeImpl o-- services.OrderService
facade.RestaurantFacadeImpl o-- services.InvoiceService

' ============================
'      APPLICATION -> FACADE
' ============================
app.Application --> facade.RestaurantFacade

' small layout hints for readability
' left to right grouping
models -[hidden]-> services
services -[hidden]-> facade
facade -[hidden]-> app

@enduml
